--- a/index.htm
+++ b/index.htm
@@ -421,21 +421,28 @@
         <h1>Join the Kuari Pass Trek!</h1>
         <p>
             Hey everyone!<br><br>
-            I'm excited to share that I'm planning a trek to the Kuari Pass this December, which will also include Christmas and New Year's events! If we reach a group size of 10 members, the total cost will be around <strong>10,000 to 15,000 INR</strong> per person, covering all expenses including travel, accommodation, and meals.
+            I'm excited to share that I'm planning a trek to the Kuari Pass this December, which will also include Christmas and New Year's events! If we reach a group size of 10 members, the total cost will be around <strong>15,000 to 20,000 INR</strong> per person, covering all expenses including travel, accommodation, and meals.
         </p>
         <div class="cost-details">
             <p><strong>Cost Details:</strong></p>
             <ul>
                 <li>If we don't reach the 10-member group size, we'll join the Trek the Himalayas group.
                     <ul>
-                        <li>In this case, the trek cost itself is <strong>12,500 INR</strong>.</li>
-                        <li>The overall budget including all travel and accommodation expenses would be up to <strong>20,000 INR</strong> per person.</li>
+                        <li>In this case, the trek cost itself is <strong>13,500 INR</strong>.</li>
+                        <li>The overall budget including all travel and accommodation expenses would be up to <strong>25,000 INR</strong> per person.</li>
                         <li>Accommodation options:
                             <ul>
                                 <li>Hostel: 250-400 INR per night</li>
-                                <li>Hotel: 1,500 INR per night for two people</li>
+                                <li>Hotel: 1,500-1,800 INR per night for two people</li>
                             </ul>
                         </li>
+                    </ul>
+                </li>
+                <li>Travel Options:
+                    <ul>
+                        <li>Non-AC Train: <strong>1,300 INR</strong> (650 x 2)</li>
+                        <li>AC 3rd Class: <strong>3,150 INR</strong> (1,575 x 2)</li>
+                        <li>2nd Class: <strong>4,660 INR</strong> (2,330 x 2)</li>
                     </ul>
                 </li>
             </ul>
