--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <h1>Join the Kuari Pass Trek!</h1>
         <p>
             Hey everyone!<br><br>
-            I'm excited to share that I'm planning a trek to the Kuari Pass this December, which will also include Christmas and New Year's events! If we reach a group size of 10 members, the total cost will be around <strong>15,000 to 20,000 INR</strong> per person, covering all expenses including travel, accommodation, and meals.
+            I'm excited to share that I'm planning a trek to the Kuari Pass this December, which will also include Christmas and New Year's events! If we reach a group size of 10 members, the total cost will be around <strong>15,000 to 20,000 INR</strong> per person, covering all expenses including travel, accommodation, and meals. Please note that the final price will vary based on your chosen travel and accommodation options.
         </p>
         <div class="cost-details">
             <p><strong>Cost Details:</strong></p>
@@ -455,9 +455,24 @@
                         <li>Non-AC Train: <strong>1,300 INR</strong> (650 x 2)</li>
                         <li>AC 3rd Class: <strong>3,150 INR</strong> (1,575 x 2)</li>
                         <li>2nd Class: <strong>4,660 INR</strong> (2,330 x 2)</li>
+                        <li>Flight Options:
+                            <ul>
+                                <li>IndiGo: <strong>8,000 INR</strong> (one-way)</li>
+                                <li>Air India: <strong>9,500 INR</strong> (one-way)</li>
+                                <li>Vistara: <strong>10,000 INR</strong> (one-way)</li>
+                            </ul>
+                            <p><em>Note:</em> Flight prices are approximate and may vary based on booking time and availability.</p>
+                        </li>
+                    </ul>
+                </li>
+                <li>Local Transportation:
+                    <ul>
+                        <li>Private Cab (Ahmedabad to Rishikesh): <strong>15,000 INR</strong> (round trip)</li>
+                        <li>Shared Vehicles: <strong>7,500 INR</strong> per person (round trip)</li>
                     </ul>
                 </li>
             </ul>
+            <p><strong>Total Cost:</strong> Depending on your choices of travel and accommodation, the total cost per person will range from <strong>15,000 INR to 30,000 INR</strong>.</p>
         </div>
         <div class="buttons">
             <button id="inButton" class="btn" aria-label="I'm In">I'm In!</button>
